# curaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  raster.cu
.github/workflows/: release.yml
examples/: 01_basic_algebra_ndvi.ipynb  02_s3_read_write_reproject.ipynb  03_clip_and_mask.ipynb  04_focal_statistics.ipynb  05_terrain_derivatives.ipynb  06_texture_features.ipynb  07_zonal_statistics.ipynb  08_temporal_stack.ipynb  09_chunked_streaming.ipynb  10_xarray_integration.ipynb  11_full_chain_stress_test.ipynb
include/: chunk_queue.h  cuda_atomic_float.h  cuda_utils.h  pinned_arena.h  pipeline.h  raster_cache.h  raster_core.h  thread_buffers.h  types.h  vram_cache.h
src/: cpu.cpp  gpu.cu  raster.cu  raster_core.h
src/algebra/: algebra_compiler.cpp  algebra_compiler.h
src/bindings/: bindings.cpp
src/chain/: chain.cpp  chain.h
src/clip/: clip.cpp  clip.h
src/engine/: engine.cpp  engine.h  engine_focal.cpp  engine_focal.h  engine_reproject.cpp  engine_temporal.cpp  engine_temporal.h  engine_zonal.cpp  engine_zonal.h
src/focal/: focal.cpp  focal.h
src/gpu/: gpu.cu  gpu_focal.cu  gpu_glcm.cu  gpu_warp.cu  gpu_zonal.cu
src/reproject/: reproject.cpp  reproject.h
src/s3/: s3_auth.cpp  s3_auth.h  s3_fetch.cpp  s3_fetch.h
src/stack/: stack.cpp  stack.h
src/texture/: texture.cpp  texture.h
src/tiff/: decompression.cpp  decompression.h  tiff_metadata.cpp  tiff_metadata.h
src/tile_io/: tile_io.cpp  tile_io.h
src/zonal/: zonal.cpp  zonal.h
tests/: conftest.py  test_chain_ops.py
