[build-system]
requires = ["scikit-build-core>=0.5", "pybind11", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "curaster"
dynamic = ["version"]
description = "CUDA-accelerated Raster Algebra Calculator"
readme = "README.md"
requires-python = ">=3.8"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
fallback_version = "0.0.0"