[build-system]
requires = ["scikit-build-core>=0.5", "pybind11", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "curaster"
dynamic = ["version"]
description = "CUDA-accelerated raster algebra and reprojection library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

keywords = ["raster", "GIS", "CUDA", "GPU", "GDAL", "remote-sensing"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]

dependencies = []

[project.urls]
Homepage   = "https://github.com/your-org/curaster"
Issues     = "https://github.com/your-org/curaster/issues"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.scikit-build]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

cmake.build-type = "Release"

wheel.install-dir = "."

cmake.version = ">=3.18"

[tool.scikit-build.sdist]
exclude = [
    "build/",
    "wheelhouse/",
    "*.tif",
    "cpu.cpp",
    "gpu.cu",
    "gpu_warp.cu",
    "raster_core.h",
    ".github/",
]
